--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <button data-href="map.html">이용 안내</button>
         <button data-href="contact.html">견적 문의</button>
     </nav>
-    <!-- <div class="login">
-        <a href="login.html">로그인</a>
-    </div> -->
+        <div class="login">
+            <a href="login.html" style="color:rgb(140, 140, 140)">관리자 권한</a>
+        </div>
 </header>
 
 <section class="section">
